--- a/src/index.css
+++ b/src/index.css
@@ -15,25 +15,25 @@ body {
 }
 
 .avatar-image {
-    width: 100px;
-    height: 100px;
+    width        : 100px;
+    height       : 100px;
     border-radius: 50px;
-    margin: auto;
+    margin       : auto;
 }
 
-.avatar-holder{
-    display: flex;
-flex-direction: column;
+.avatar-holder {
+    display       : flex;
+    flex-direction: column;
 }
 
 .avatar-name {
-    margin: auto;
+    margin     : auto;
     font-weight: bold;
 }
 
 .login-button {
     text-align: center;
-    margin: 2%;
+    margin    : 2%;
 }
 
 .headline {
@@ -41,22 +41,38 @@ flex-direction: column;
 }
 
 .homepage-container {
-    max-width       : 4000px;
-    padding         : 2% 5% 2% 5%;
+    max-width: 4000px;
+    padding  : 2% 5% 2% 5%;
 }
 
 .avatar-area {
-    height          : 20vh;
-    margin          : 2%;
+    height: 20vh;
+    margin: 2%;
 }
 
 .newpost-holder {
     height          : 30vh;
-    border-style: dotted;
-    margin          : 2%;
+    border-radius: 5px;
+    margin          : 6% auto;
+    background-color: whitesmoke;
+    position        : relative;
 }
 
 .timeline-holder {
     border-style: dotted;
-    margin          : 2%;
+    margin      : 2%;
+}
+
+.newpost-upperline {
+    
+    width           : 100%;
+    margin          : 1%;
+    text-align      : right;
+    padding: 0 2%;
+}
+
+.devider {
+    width: 100%;
+    height: 1px;
+    background-color: rgb(189, 189, 189);
 }
