--- a/src/index.css
+++ b/src/index.css
@@ -51,8 +51,8 @@ body {
 }
 
 .newpost-holder {
-    height          : 30vh;
-    border-radius: 5px;
+    height          : 60vh;
+    border-radius   : 5px;
     margin          : 6% auto;
     background-color: whitesmoke;
     position        : relative;
@@ -64,15 +64,35 @@ body {
 }
 
 .newpost-upperline {
-    
-    width           : 100%;
-    margin          : 1%;
-    text-align      : right;
-    padding: 0 2%;
+
+    width     : 100%;
+    margin    : 1%;
+    text-align: right;
+    padding   : 0 2%;
 }
 
 .devider {
-    width: 100%;
-    height: 1px;
+    width           : 100%;
+    height          : 1px;
     background-color: rgb(189, 189, 189);
+}
+
+.post-text-content-input {
+    height: 15vh
+}
+
+.submit-button {
+    position: absolute;
+    left    : 10%;
+    bottom: 25%;
+}
+
+.input-form-holder {
+    width     : 100%;
+    padding   : 1% 4%;
+    text-align: right;
+}
+
+.text-input-holder {
+    height: 40vh
 }
