--- a/src/index.css
+++ b/src/index.css
@@ -102,3 +102,11 @@ body {
 .text-input-holder {
     height: 40vh
 }
+
+.photo-remove-button{
+    width: 30px;
+    height: 20px;
+    margin: 10px;
+    padding:0;
+    font-weight: bold;
+}
